Add sshd config

--- a/playbooks/provision_halibut.yml
+++ b/playbooks/provision_halibut.yml
@@ -6,4 +6,5 @@
   roles:
     # - { role: config }
     - { role: pacman }
-    - { role: code42 }
+    # - { role: code42 }
+    - { role: post-config }
