--- a/playbooks/provision_halibut.yml
+++ b/playbooks/provision_halibut.yml
@@ -5,6 +5,6 @@
   become: yes
   roles:
     # - { role: config }
-    - { role: pacman }
+    - { role: packages }
     # - { role: code42 }
     - { role: post-config }
