--- a/roles/post-config/tasks/main.yml
+++ b/roles/post-config/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
+- include_tasks: users_groups.yml
 - include_tasks: crashplan.yml
 - include_tasks: sshd.yml
 - include_tasks: tigervnc.yml
 - include_tasks: filestore.yml
-- include_tasks: transmission.yml
+- include_tasks: deluge.yml
