--- a/roles/post-config/files/deluged.service
+++ b/roles/post-config/files/deluged.service
@@ -4,12 +4,10 @@ Documentation=man:deluged
 After=network-online.target
 
 [Service]
-User=deluge
-Group=media
 Type=simple
 UMask=002
 
-ExecStart=/usr/bin/deluged -d
+ExecStart=/usr/bin/deluged -d -c /var/lib/deluged/config/
 
 Restart=on-failure
 
